--- a/otros.html
+++ b/otros.html
@@ -82,7 +82,7 @@
                     <section><img src="img/otros/desgranado.jpg" alt="desgranadoDeLaCasa"></section>
                     <section><img src="img/otros/morrongo.jpg" alt="morrongo"></section>
                     <section><img src="img/otros/morrongoDeLaCasa.jpg" alt="doblecarneChorizo"></section>
-                    <section><img src="img/otros/picada.jpg" alt="picadaEspecial"></section>
+                    <section><img src="img/otros/sssss.jpg" alt="picadaEspecial"></section>
                 </div>
                 <div id="Hbtn-prev">&#60;</div>
                 <div id="Hbtn-next">&#62;</div>
