--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <link rel="stylesheet" href="estilo3.css">
-    <title>ClassicBurger</title>
+    <title>ClassicBurger23</title>
     <link rel="icon" type="image/png" href="./img/logo/favicon.png">
 </head>
 <body class="flex">
