--- a/promociones.html
+++ b/promociones.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ClassicBurger</title>
+    <title>ClassicBurger23</title>
     <link rel="icon" type="image/png" href="./img/logo/favicon.png">
     <link rel="stylesheet" href="https://bootswatch.com/4/sandstone/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
